<resources>
    <string name="app_name">Authentification</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="image">image</string>
    <string name="login_screen">LOGIN SCREEN</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_screen">REGISTER SCREEN</string>
    <string name="register_text">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_text">Login</string>
    <string name="you_are_logged_in_successfully">You are logged in successfully</string>
    <string name="logout">LOGOUT</string>
</resources>